# bdk_py

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  rust.yml
src/: box_.rs  brush.rs  bsp.rs  coords.rs  csg.rs  fpoly.rs  lib.rs  math.rs  model.rs  sphere.rs
tests/: box_tests.rs  bsp_tests.rs  fpoly_tests.rs  math_tests.rs  sphere_tests.rs
