[package]
name = "bdk_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
arrayvec = "0.7.4"
bitflags = "2.4.0"

[dependencies.pyo3]
version = "0.21.1"
features = ["extension-module", "macros"]