[package]
name = "bdk_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bdk_py"
crate-type = ["cdylib", "lib"]

[dependencies]
cgmath = "0.18.0"
arrayvec = "0.7.4"
bitflags = "2.4.0"
phf = { version = "0.11", features = ["macros"] }

[dependencies.pyo3]
version = "0.21.1"
features = ["extension-module", "macros"]